Fixed cosmic cupcakes nav link size on mobile

--- a/cosmiccupcakes/styles.css
+++ b/cosmiccupcakes/styles.css
@@ -445,9 +445,13 @@ footer {
 }
 
 @media (max-width: 500px) {
+    nav ul {
+        display: flex;
+        gap: 15px;
+    }
 
     nav ul li a {
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .hero img {
